Change greeting from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<a href="sectioned-quiz.html">Go to Sectioned Quiz</a>
+<a href="index.html">Back to Original Quiz</a>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -362,3 +364,4 @@ render();
 </script>
 </body>
 </html>
+
