Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<a href="sectioned-quiz.html">Go to Sectioned Quiz</a>
-<a href="index.html">Back to Original Quiz</a>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -47,6 +45,25 @@
 </style>
 </head>
 <body>
+  <nav style="
+  display:flex;
+  gap:20px;
+  justify-content:center;
+  align-items:center;
+  background:#121a33;
+  border-bottom:1px solid #1f2a52;
+  padding:12px;
+  margin-bottom:20px;
+  border-radius:0 0 12px 12px;
+  box-shadow:0 4px 12px rgba(0,0,0,0.3)
+">
+  <a href="index.html" style="color:#eef3ff; text-decoration:none; font-weight:600;">
+    🏠 Original Quiz
+  </a>
+  <a href="sectioned-quiz.html" style="color:#eef3ff; text-decoration:none; font-weight:600;">
+    📚 Sectioned Quiz
+  </a>
+</nav>
 <div class="wrap">
   <header>
     <h1>Pathophysiology Master Quiz – 100 MCQs</h1>
@@ -364,4 +381,5 @@ render();
 </script>
 </body>
 </html>
+
 
