--- a/sectioned-quiz.html
+++ b/sectioned-quiz.html
@@ -46,6 +46,25 @@
 </style>
 </head>
 <body>
+  <nav style="
+  display:flex;
+  gap:20px;
+  justify-content:center;
+  align-items:center;
+  background:#121a33;
+  border-bottom:1px solid #1f2a52;
+  padding:12px;
+  margin-bottom:20px;
+  border-radius:0 0 12px 12px;
+  box-shadow:0 4px 12px rgba(0,0,0,0.3)
+">
+  <a href="index.html" style="color:#eef3ff; text-decoration:none; font-weight:600;">
+    🏠 Original Quiz
+  </a>
+  <a href="sectioned-quiz.html" style="color:#eef3ff; text-decoration:none; font-weight:600;">
+    📚 Sectioned Quiz
+  </a>
+</nav>
 <div class="wrap">
   <header>
     <h1>Pathophysiology Quiz — Sectioned Version</h1>
