Add acronym index to sectioned-quiz.html
Added an acronym index with medical definitions.

--- a/sectioned-quiz.html
+++ b/sectioned-quiz.html
@@ -110,6 +110,86 @@
         <summary><strong>Review Sheet</strong> (after submit)</summary>
         <div id="review" class="muted" style="margin-top:8px;font-size:13px"></div>
       </details>
+      <details style="margin-top:10px" open>
+  <summary><strong>Acronym Index</strong></summary>
+  <ul style="font-size:13px; color:#b9c9ff; margin-top:6px; line-height:1.5">
+    <li><strong>A2/A3 (albuminuria)</strong> – A2: 30–300 mg/g; A3: >300 mg/g (albumin-to-creatinine ratio)</li>
+    <li><strong>ACC/AHA</strong> – American College of Cardiology / American Heart Association</li>
+    <li><strong>ACEi</strong> – Angiotensin-Converting Enzyme inhibitor</li>
+    <li><strong>ACD</strong> – Anemia of Chronic Disease</li>
+    <li><strong>ACR</strong> – Albumin-to-Creatinine Ratio</li>
+    <li><strong>ACS</strong> – Acute Chest Syndrome (sickle cell context)</li>
+    <li><strong>ADCC</strong> – Antibody-Dependent Cellular Cytotoxicity</li>
+    <li><strong>AeIOU (dialysis)</strong> – Acidosis, Electrolytes, Intoxications, Overload, Uremia</li>
+    <li><strong>AAT</strong> – Alpha-1 Antitrypsin</li>
+    <li><strong>AIHA</strong> – Autoimmune Hemolytic Anemia</li>
+    <li><strong>AKI</strong> – Acute Kidney Injury</li>
+    <li><strong>ANA</strong> – Antinuclear Antibody</li>
+    <li><strong>ARB</strong> – Angiotensin II Receptor Blocker</li>
+    <li><strong>ARNI</strong> – Angiotensin Receptor–Neprilysin Inhibitor</li>
+    <li><strong>ASCVD</strong> – Atherosclerotic Cardiovascular Disease</li>
+    <li><strong>ATN</strong> – Acute Tubular Necrosis</li>
+    <li><strong>BAFF (BLyS)</strong> – B-cell Activating Factor (B Lymphocyte Stimulator)</li>
+    <li><strong>BPH</strong> – Benign Prostatic Hyperplasia</li>
+    <li><strong>CAD</strong> – Coronary Artery Disease</li>
+    <li><strong>CCR5 / CXCR4</strong> – Chemokine co-receptors used by HIV</li>
+    <li><strong>CKD</strong> – Chronic Kidney Disease</li>
+    <li><strong>COPD</strong> – Chronic Obstructive Pulmonary Disease</li>
+    <li><strong>CTLA-4–Ig</strong> – Cytotoxic T-Lymphocyte Antigen-4–Immunoglobulin (costimulation blocker)</li>
+    <li><strong>CVA (tenderness)</strong> – Costovertebral Angle (tenderness)</li>
+    <li><strong>DHFR</strong> – Dihydrofolate Reductase</li>
+    <li><strong>DLCO</strong> – Diffusing Capacity for Carbon Monoxide</li>
+    <li><strong>DMARD</strong> – Disease-Modifying Antirheumatic Drug</li>
+    <li><strong>dsDNA (anti-)</strong> – Anti–double-stranded DNA antibody</li>
+    <li><strong>EPO</strong> – Erythropoietin</li>
+    <li><strong>FeNa</strong> – Fractional Excretion of Sodium</li>
+    <li><strong>G3a/G3b/G4 (CKD)</strong> – eGFR 45–59 / 30–44 / 15–29 mL/min/1.73m²</li>
+    <li><strong>G6PD</strong> – Glucose-6-Phosphate Dehydrogenase</li>
+    <li><strong>GN</strong> – Glomerulonephritis</li>
+    <li><strong>HbF</strong> – Fetal Hemoglobin</li>
+    <li><strong>HbS</strong> – Sickle Hemoglobin</li>
+    <li><strong>HDL</strong> – High-Density Lipoprotein</li>
+    <li><strong>HFmrEF</strong> – Heart Failure with mildly reduced Ejection Fraction (41–49%)</li>
+    <li><strong>HFpEF</strong> – Heart Failure with preserved Ejection Fraction (≥50%)</li>
+    <li><strong>HFrEF</strong> – Heart Failure with reduced Ejection Fraction (≤40%)</li>
+    <li><strong>HIV</strong> – Human Immunodeficiency Virus</li>
+    <li><strong>ICS</strong> – Inhaled Corticosteroid</li>
+    <li><strong>IVDU</strong> – Intravenous Drug Use</li>
+    <li><strong>JVD</strong> – Jugular Venous Distension</li>
+    <li><strong>LAMA</strong> – Long-Acting Muscarinic Antagonist</li>
+    <li><strong>LABA</strong> – Long-Acting Beta-Agonist</li>
+    <li><strong>LDH</strong> – Lactate Dehydrogenase</li>
+    <li><strong>LDL</strong> – Low-Density Lipoprotein</li>
+    <li><strong>LSB / RUSB</strong> – Left Sternal Border / Right Upper Sternal Border</li>
+    <li><strong>LTOT</strong> – Long-Term Oxygen Therapy</li>
+    <li><strong>LUTS</strong> – Lower Urinary Tract Symptoms</li>
+    <li><strong>MMA</strong> – Methylmalonic Acid</li>
+    <li><strong>MRA</strong> – Mineralocorticoid Receptor Antagonist</li>
+    <li><strong>MR</strong> – Mitral Regurgitation</li>
+    <li><strong>MS</strong> – Mitral Stenosis</li>
+    <li><strong>MMF</strong> – Mycophenolate Mofetil</li>
+    <li><strong>MTX</strong> – Methotrexate</li>
+    <li><strong>NYHA</strong> – New York Heart Association (functional class)</li>
+    <li><strong>PCP</strong> – Pneumocystis pneumonia</li>
+    <li><strong>PFT</strong> – Pulmonary Function Test</li>
+    <li><strong>PNH</strong> – Paroxysmal Nocturnal Hemoglobinuria</li>
+    <li><strong>PPI</strong> – Proton Pump Inhibitor</li>
+    <li><strong>RDW</strong> – Red cell Distribution Width</li>
+    <li><strong>RRT</strong> – Renal Replacement Therapy (dialysis)</li>
+    <li><strong>SABA</strong> – Short-Acting Beta-Agonist</li>
+    <li><strong>SGLT2</strong> – Sodium-Glucose Cotransporter-2 (inhibitor)</li>
+    <li><strong>SLE</strong> – Systemic Lupus Erythematosus</li>
+    <li><strong>TB</strong> – Tuberculosis</li>
+    <li><strong>TG</strong> – Triglycerides</li>
+    <li><strong>TIBC</strong> – Total Iron-Binding Capacity</li>
+    <li><strong>TSAT</strong> – Transferrin Saturation</li>
+    <li><strong>UA</strong> – Urinalysis</li>
+    <li><strong>UTI</strong> – Urinary Tract Infection</li>
+    <li><strong>VLDL</strong> – Very-Low-Density Lipoprotein</li>
+    <li><strong>WBC</strong> – White Blood Cell</li>
+  </ul>
+</details>
+
     </aside>
   </div>
 
