--- a/sectioned-quiz.html
+++ b/sectioned-quiz.html
@@ -266,6 +266,13 @@ const BANK = {
     {cat:'Hematology', stem:'Pathophysiology of aplastic anemia involves:', choices:['Autoimmune destruction or failure of bone marrow stem cells','Iron deficiency only','Hemolysis of mature RBCs','Isolated platelet consumption'], answer:0, why:'Marrow stem cell suppression leads to pancytopenia.'},
     {cat:'Hematology', stem:'Most common anemia in children worldwide:', choices:['Iron deficiency anemia','Sickle cell disease','Aplastic anemia','Vitamin B12 deficiency'], answer:0, why:'Dietary deficiency and high demand make IDA most common.'},
     {cat:'Hematology', stem:'Why should attenuated vaccines be avoided in immunocompromised patients?', choices:['They are ineffective','They may cause severe disease from the vaccine strain','They are too expensive','They only work in children'], answer:1, why:'Immunocompromised hosts cannot control replication of live vaccines.'},
+    {cat:'Hematology', stem:'Important risk factors for iron deficiency anemia in addition to adult GI loss include:', choices:[
+  'High vitamin C intake and obesity',
+  'Heavy menstrual bleeding, pregnancy, low dietary iron, malabsorption (e.g., celiac disease)',
+  'Daily multivitamin use',
+  'Hyperlipidemia and gout'
+], answer:1, why:'High demand (menorrhagia, pregnancy), poor intake, and malabsorption are key IDA risks beyond occult GI bleeding.'}
+
   ],
   'Cardiovascular': [
     {cat:'Cardio', stem:'Initial event in atherosclerosis is:', choices:['Calcification of fibrous cap','Endothelial dysfunction with LDL infiltration','Platelet plug formation','Media necrosis'], answer:1, why:'Endothelial injury permits LDL entry/oxidation and monocyte recruitment.'},
@@ -303,6 +310,27 @@ const BANK = {
     {cat:'Cardio', stem:'Which patients are ACC/AHA Stage A for heart failure?', choices:['Structural heart disease without symptoms','Refractory symptoms at rest','At risk for HF but without structural disease or symptoms (e.g., HTN, DM)','Structural disease with prior/current symptoms'], answer:2, why:'Stage A = risk only; Stage B = structural no symptoms; Stage C = structural + symptoms; Stage D = refractory.'},
     {cat:'Cardio', stem:'ACC/AHA Stage D heart failure is best described as:', choices:['At risk only','Refractory HF requiring advanced therapies (inotropes, LVAD, transplant, palliative)','Structural disease without symptoms','New-onset hypertension'], answer:1, why:'Stage D = advanced/refractory HF.'},
     {cat:'Cardio', stem:'Risk factors for degenerative calcific aortic stenosis include:', choices:['Low LDL and female sex only','Bicuspid aortic valve, age, hyperlipidemia, CKD, smoking','Rheumatic fever only','Acute myocarditis'], answer:1, why:'Bicuspid anatomy accelerates calcification; atherosclerotic risks (lipids, smoking, CKD) contribute.'}
+    {cat:'Cardio', stem:'Which total cholesterol thresholds are correct for adults?', choices:[
+  'Normal <180; Borderline 180–219; High ≥220 mg/dL',
+  'Normal <200; Borderline 200–239; High ≥240 mg/dL',
+  'Normal <220; Borderline 220–259; High ≥260 mg/dL',
+  'Normal <190; Borderline 190–229; High ≥230 mg/dL'
+], answer:1, why:'Standard adult cut points: desirable <200 mg/dL; borderline high 200–239; high ≥240.'},
+
+{cat:'Cardio', stem:'Most common cause of chronic primary mitral regurgitation in high-income countries:', choices:[
+  'Ischemic papillary muscle dysfunction',
+  'Myxomatous degeneration/mitral valve prolapse',
+  'Rheumatic carditis',
+  'Congenital cleft mitral valve'
+], answer:1, why:'MVP/myxomatous degeneration is the leading chronic primary MR cause; ischemic MR is typically secondary/functional.'},
+
+{cat:'Cardio', stem:'Typical etiologies of chronic aortic regurgitation include:', choices:[
+  'Pulmonic stenosis and ASD',
+  'Bicuspid aortic valve and aortic root dilation (e.g., hypertension, Marfan) ± prior endocarditis',
+  'Tricuspid atresia and coarctation',
+  'Mitral annular calcification alone'
+], answer:1, why:'AR commonly arises from leaflet disease (bicuspid, endocarditis) or root dilation (HTN, connective-tissue disease).'}
+
   ],
   'Pulmonary': [
     {cat:'Pulmonary', stem:'Obstructive PFT pattern:', choices:['Low TLC with normal/high FEV1/FVC','Low FEV1 and FEV1/FVC <0.70 with air trapping','Normal FEV1/FVC with low DLCO only','High TLC with high FEV1/FVC'], answer:1, why:'Ratio falls; RV/TLC often ↑.'},
@@ -328,6 +356,13 @@ const BANK = {
     {cat:'Pulmonary', stem:'Restrictive ILD pattern vs obstructive asthma pattern on spirometry:', choices:['ILD = ↓TLC with preserved/high FEV1/FVC; Asthma = ↓FEV1 and ↓FEV1/FVC ratio','Both show ↓FEV1/FVC','Both show ↑TLC','ILD shows increased DLCO'], answer:0, why:'Obstruction lowers ratio; restriction preserves ratio with low TLC.'},
     {cat:'Pulmonary', stem:'Classic signs/symptoms of chronic bronchitis include:', choices:['Nonproductive cough, weight loss, hyperresonance','Productive cough ≥3 months/year for ≥2 years, wheeze, cyanosis tendency','Hemoptysis, clubbing, pleuritic chest pain only','Sudden onset dyspnea with clear lungs'], answer:1, why:'Clinical definition + common findings.'},
     {cat:'Pulmonary', stem:'Outpatient chronic bronchitis (COPD) maintenance priorities include:', choices:['Immediate long-term steroids alone','Smoking cessation, vaccinations, bronchodilators (LAMA/LABA ± ICS by phenotype), pulmonary rehab','Antibiotics daily','SABA only'], answer:1, why:'Evidence-based pillars of COPD care.'}, 
+    {cat:'Pulmonary', stem:'Classic clinical differences: emphysema vs chronic bronchitis phenotype', choices:[
+  'Emphysema: chronic purulent cough, cyanosis; CB: cachectic with pursed-lip breathing',
+  'Emphysema: exertional dyspnea, weight loss, barrel chest, pursed-lip breathing; CB: chronic productive cough ≥3 mo/yr ×2y, wheeze, cyanosis tendency',
+  'Emphysema: recurrent infections with copious sputum; CB: minimal sputum',
+  'They are clinically indistinguishable'
+], answer:1, why:'Traditional “pink puffer” (emphysema) vs “blue bloater” (chronic bronchitis) phenotypes highlight dyspnea/cachexia vs cough/sputum/cyanosis.'}
+
   ],
   'Renal & Urinary': [
     {cat:'Renal', stem:'Uncomplicated cystitis presentation:', choices:['Fever, flank pain, CVA tenderness','Dysuria, frequency, urgency without systemic toxicity','Gross hematuria only','Urinary retention'], answer:1, why:'Irritative voiding symptoms; afebrile typically.'},
