Fix formatting issues in sectioned-quiz.html

--- a/sectioned-quiz.html
+++ b/sectioned-quiz.html
@@ -271,7 +271,7 @@ const BANK = {
   'Heavy menstrual bleeding, pregnancy, low dietary iron, malabsorption (e.g., celiac disease)',
   'Daily multivitamin use',
   'Hyperlipidemia and gout'
-], answer:1, why:'High demand (menorrhagia, pregnancy), poor intake, and malabsorption are key IDA risks beyond occult GI bleeding.'}
+  ],  answer:1, why:'High demand (menorrhagia, pregnancy), poor intake, and malabsorption are key IDA risks beyond occult GI bleeding.'},
 
   ],
   'Cardiovascular': [
@@ -329,7 +329,7 @@ const BANK = {
   'Bicuspid aortic valve and aortic root dilation (e.g., hypertension, Marfan) ± prior endocarditis',
   'Tricuspid atresia and coarctation',
   'Mitral annular calcification alone'
-], answer:1, why:'AR commonly arises from leaflet disease (bicuspid, endocarditis) or root dilation (HTN, connective-tissue disease).'}
+], answer:1, why:'AR commonly arises from leaflet disease (bicuspid, endocarditis) or root dilation (HTN, connective-tissue disease).'},
 
   ],
   'Pulmonary': [
@@ -361,7 +361,7 @@ const BANK = {
   'Emphysema: exertional dyspnea, weight loss, barrel chest, pursed-lip breathing; CB: chronic productive cough ≥3 mo/yr ×2y, wheeze, cyanosis tendency',
   'Emphysema: recurrent infections with copious sputum; CB: minimal sputum',
   'They are clinically indistinguishable'
-], answer:1, why:'Traditional “pink puffer” (emphysema) vs “blue bloater” (chronic bronchitis) phenotypes highlight dyspnea/cachexia vs cough/sputum/cyanosis.'}
+], answer:1, why:'Traditional “pink puffer” (emphysema) vs “blue bloater” (chronic bronchitis) phenotypes highlight dyspnea/cachexia vs cough/sputum/cyanosis.'},
 
   ],
   'Renal & Urinary': [
