--- a/sectioned-quiz.html
+++ b/sectioned-quiz.html
@@ -234,6 +234,169 @@ const BANK = {
     {cat:'Immunity', stem:'At what CD4 count do opportunistic infections like Pneumocystis pneumonia usually appear in HIV?', choices:['>800','200–500','<200','<50'], answer:2, why:'PCP risk rises at <200 CD4 cells/µL.'},
     {cat:'Immunity', stem:'Type II hypersensitivity—general treatment principle:', choices:['Epinephrine only','Remove/avoid offending antigen, immunosuppression (e.g., steroids), and in severe cases plasmapheresis/IVIG','Antibiotics only','Allergen immunotherapy'], answer:1, why:'Antibody-mediated diseases often respond to immunosuppression and, when needed, antibody removal.'},
     {cat:'Immunity', stem:'Type III immune-complex disease—treatment often includes:', choices:['High-dose antihistamines alone','NSAIDs ± glucocorticoids and treat inciting antigen (e.g., stop drug, treat infection)','Anticoagulation only','Desensitization shots'], answer:1, why:'Reduce inflammation and remove the trigger.'}
+     {cat:'Immunity', stem:'Hypersensitivity is best defined as:', choices:[
+    'Disturbance in immunologic tolerance of self-antigens',
+    'Immunologic reaction of one person to the tissue of another person',
+    'Altered immunologic response to an antigen that results in disease',
+    'Undetectable immune response in the presence of antigens'
+  ], answer:2, why:'By definition, hypersensitivity is an altered immune response to an antigen that harms the host.'},
+
+  {cat:'Immunity', stem:'A hypersensitivity reaction that produces an allergic response is called:', choices:[
+    'Hemolytic shock','Anaphylaxis','Necrotizing vasculitis','Systemic erythematosus'
+  ], answer:1, why:'Systemic, severe type I reactions manifest as anaphylaxis (e.g., stings, peanuts, fish).'},
+  
+  {cat:'Immunity', stem:'The common hay-fever allergy is mediated primarily by:', choices:[
+    'IgE','IgG','IgM','T cells'
+  ], answer:0, why:'Type I allergy is IgE-mediated with mast cell involvement.'},
+
+  {cat:'Immunity', stem:'Which antibody class mediates type I hypersensitivity?', choices:[
+    'IgA','IgE','IgG','IgM'
+  ], answer:1, why:'Type I reactions are mediated by antigen-specific IgE.'},
+
+  {cat:'Immunity', stem:'Blood transfusion reactions are an example of:', choices:[
+    'Autoimmunity','Alloimmunity','Homoimmunity','Hypersensitivity'
+  ], answer:1, why:'Alloimmunity = immune response to antigens of another individual of the same species (e.g., ABO).'},
+  
+  {cat:'Immunity', stem:'During an IgE-mediated hypersensitivity reaction, which leukocyte is characteristically activated?', choices:[
+    'Neutrophils','Monocytes','Eosinophils','T lymphocytes'
+  ], answer:2, why:'Eosinophils are recruited and activated in IgE-mediated allergy.'},
+
+  {cat:'Immunity', stem:'In IgE-mediated reactions, what primarily causes bronchospasm?', choices:[
+    'Bronchial edema from anaphylatoxins',
+    'Edema from cytotropic antibody binding',
+    'Histamine acting at H1 receptors causing smooth muscle contraction',
+    'Histamine acting at H2 receptors causing smooth muscle contraction'
+  ], answer:2, why:'Histamine via H1 → bronchial smooth muscle contraction and bronchospasm.'},
+
+  {cat:'Immunity', stem:'Atopic individuals are genetically predisposed to allergy because they tend to have:', choices:[
+    'Greater quantities of histamine',
+    'More histamine receptors',
+    'Greater quantities of IgE (and more Fcε receptors on mast cells)',
+    'A deficiency in epinephrine'
+  ], answer:2, why:'Atopy is associated with higher IgE production and increased FcεRI on mast cells.'},
+
+  {cat:'Immunity', stem:'Primary mechanism in type II hypersensitivity:', choices:[
+    'Antibodies coat mast cells to trigger degranulation',
+    'Antibodies bind soluble antigens forming circulating complexes',
+    'Cytotoxic T cells directly lyse targets',
+    'Antibodies bind antigens on cell surfaces (tissue-specific)'
+  ], answer:3, why:'Type II = antibody binding to cell/ECM antigens → complement/ADCC/receptor effects.'},
+
+  {cat:'Immunity', stem:'ABO-mismatched transfusion causes erythrocyte destruction primarily by:', choices:[
+    'Complement-mediated lysis','Phagocytosis by macrophages','Phagocytosis in spleen','Natural killer cells'
+  ], answer:0, why:'IgM anti-A/anti-B efficiently fix complement → intravascular hemolysis.'},
+
+  {cat:'Immunity', stem:'When antibodies form against Rh antigens on RBCs, the cells are most often destroyed by:', choices:[
+    'Complement-mediated lysis','Phagocytosis by macrophages (blood)',
+    'Phagocytosis in the spleen','Neutrophil granules'
+  ], answer:2, why:'Low-density coating → Fc-mediated clearance in the spleen (extravascular hemolysis).'},
+  
+  {cat:'Immunity', stem:'In type III hypersensitivity, tissue damage from immune complexes is largely due to:', choices:[
+    'Cytotoxic T cells','NK cells','Complement activation with neutrophil recruitment','Mast-cell degranulation'
+  ], answer:2, why:'Complement (C3a/C5a) recruits/activates neutrophils; their enzymes/ROS injure tissue.'},
+
+  {cat:'Immunity', stem:'Which submechanism of type II hypersensitivity best explains Graves disease?', choices:[
+    'Complement-mediated cytolysis','Antibody-dependent cellular cytotoxicity',
+    'Receptor modulation (stimulatory/blocking)','Neutrophil-mediated damage'
+  ], answer:2, why:'TSH-receptor–stimulating antibodies cause hyperthyroidism (receptor modulation).'},
+  
+  {cat:'Immunity', stem:'Type III hypersensitivity results from:', choices:[
+    'Mast cell coating by antibody and degranulation',
+    'Antibodies binding soluble antigens with deposition of immune complexes in tissues',
+    'Tc/Th1 cells directly destroying targets',
+    'Antibodies binding cell-surface antigens'
+  ], answer:1, why:'Circulating immune complexes deposit in vessel walls/extravascular tissues.'},
+
+  {cat:'Immunity', stem:'Type IV hypersensitivity is mediated by:', choices:[
+    'Mast cells','Immune complexes','T lymphocytes (Th1/Tc)','Antibodies'
+  ], answer:2, why:'Type IV is cell-mediated (delayed) via Th1 cytokines and/or cytotoxic T cells.'},
+
+  {cat:'Immunity', stem:'Raynaud phenomenon (immune-complex form) is best explained by:', choices:[
+    'Cytotoxic T-cell destruction of capillaries',
+    'Immune complex deposition in cold-exposed capillary beds',
+    'IgE-mediated mast-cell degranulation',
+    'Autoantibody blockade of β2 receptors'
+  ], answer:1, why:'Temperature-dependent immune complex deposition impairs perfusion.'},
+
+  {cat:'Immunity', stem:'Maternal sensitization to fetal antigens is an example of:', choices:[
+    'T-cell immunity','Alloimmunity','Autoimmunity','Fetal immunity'
+  ], answer:1, why:'Response to antigens from a genetically different individual of the same species.'},
+
+  {cat:'Immunity', stem:'SLE tissue damage is primarily caused by:', choices:[
+    'Hemolysis by warm autoantibodies',
+    'Pernicious anemia',
+    'Deposition of immune complexes containing anti-DNA',
+    'Receptor blockade at neuromuscular junction'
+  ], answer:2, why:'Type III immune complex deposition drives many SLE manifestations.'},
+
+  {cat:'Immunity', stem:'Why does acute rejection occur after organ transplantation?', choices:[
+    'Primarily Th1/Tc cell–mediated response against unmatched donor HLA antigens',
+    'Circulating immune complexes lyse endothelium via complement',
+    'NK-cell recognition of “missing self” only',
+    'Mast-cell–mediated degranulation on graft endothelium'
+  ], answer:0, why:'Recipient Th1 cytokines activate macrophages; Tc cells attack graft endothelium.'},
+
+  {cat:'Immunity', stem:'Which blood cell carries the carbohydrate antigens for ABO blood type?', choices:[
+    'Platelets','Neutrophils','Lymphocytes','Erythrocytes'
+  ], answer:3, why:'ABO antigens are on RBC surfaces.'},
+
+  {cat:'Immunity', stem:'A person with type O blood typically has naturally occurring antibodies against:', choices:[
+    'A','B','A and B','O'
+  ], answer:2, why:'Type O has both anti-A and anti-B isohemagglutinins.'},
+
+  {cat:'Immunity', stem:'Isohemagglutinins (naturally occurring ABO antibodies) are primarily which class?', choices:[
+    'IgA','IgE','IgG','IgM'
+  ], answer:3, why:'ABO isohemagglutinins are classically IgM.'},
+
+  {cat:'Immunity', stem:'Recurrent infections with viruses, fungi, or yeasts most strongly suggest deficiency of:', choices:[
+    'NK cells','B cells','Macrophages','T cells'
+  ], answer:3, why:'Cell-mediated (T-cell) defects predispose to these pathogens (e.g., Pneumocystis, Candida).'},
+  
+  {cat:'Immunity', stem:'Primary immunodeficiency with partial/complete absence of T-cell immunity:', choices:[
+    'Bruton (X-linked agammaglobulinemia)','DiGeorge syndrome',
+    'Reticular dysgenesis','Adenosine deaminase deficiency'
+  ], answer:1, why:'DiGeorge: thymic hypoplasia → T-cell deficiency.'},
+
+  {cat:'Immunity', stem:'By what age are infants typically protected by antibodies produced by their own B cells?', choices:[
+    '1–2 months','4–5 months','6–8 months','10–12 months'
+  ], answer:2, why:'Endogenous humoral immunity is generally adequate by ~6–8 months.'},
+
+  {cat:'Immunity', stem:'Severe deficits in calories/protein most prominently cause deficiencies in:', choices:[
+    'B-cell numbers','T-cell function and numbers','NK-cell function','Neutrophil count'
+  ], answer:1, why:'Protein-calorie malnutrition depresses T-cell immunity.'},
+
+  {cat:'Immunity', stem:'Urticaria (hives) is a manifestation of which hypersensitivity type?', choices:[
+    'Type IV','Type III','Type II','Type I'
+  ], answer:3, why:'Classic IgE-mediated type I reaction.'},
+
+  {cat:'Immunity', stem:'Graves disease results from:', choices:[
+    'Increased total immunoglobulins',
+    'T-cell infiltration of thyroid only',
+    'Autoantibodies binding to TSH-receptor sites (stimulatory)',
+    'Exposure to rubber acetylates'
+  ], answer:2, why:'TSH-receptor–stimulating antibodies drive hyperthyroidism.'},
+
+  {cat:'Immunity', stem:'Which cellular mediators produce the induration of a positive tuberculin skin test (PPD)?', choices:[
+    'Histamine and complement products',
+    'Immune complexes',
+    'T lymphocytes and macrophages',
+    'Basophils and eosinophils'
+  ], answer:2, why:'Type IV delayed reaction with Th1 cells and macrophage recruitment.'},
+
+  {cat:'Immunity', stem:'Which exposure is a classic trigger of type IV (delayed) hypersensitivity?', choices:[
+    'Penicillin anaphylaxis',
+    'Poison ivy resin (urushiol)',
+    'Allergic rhinitis to ragweed',
+    'Immediate latex anaphylaxis'
+  ], answer:1, why:'Contact dermatitis to plant resins/metals/topical antibiotics is type IV.'},
+
+  {cat:'Immunity', stem:'Which disorder is an autoimmune disease?', choices:[
+    'Crohn disease','Non–insulin-dependent diabetes (type 2)','Osteoarthritis','Gout'
+  ], answer:0, why:'Crohn disease is immune-mediated; type 2 DM is not primarily autoimmune.'},
+
+  {cat:'Immunity', stem:'Natural killer (NK) cells destroy antibody-coated targets in which mechanism?', choices:[
+    'Complement-mediated lysis','Phagocytosis','ADCC (antibody-dependent cellular cytotoxicity)','Neutralization'
+  ], answer:2, why:'Fc receptor on NK binds IgG on target → cytotoxic granule release (a type II submechanism).'},
   ],
   'Hematology': [
     {cat:'Hematology', stem:'Microcytic anemia is most commonly caused by:', choices:['Vitamin B12 deficiency','Iron deficiency','Alcohol use disorder','Hypothyroidism'], answer:1, why:'Iron deficiency is the most prevalent cause of microcytosis.'},
